# event_logger

./: README.md  insights.py  pyproject.toml  setup.py
event_logger/: __init__.py  insights.py  logger.py  visualization.pu
eventlogger/: __init__.py  insights.py  logger.py  processor.py  visualizer.py
src/event_logger/: __init__.py  scribe.py
